add template and enable dns and DoH to ini example

--- a/sources/subconverteriniexample/Full_AdblockPlus.ini
+++ b/sources/subconverteriniexample/Full_AdblockPlus.ini
@@ -9,6 +9,9 @@
 ;Enhanced China IP segment: not supported
 ; Enhanced foreign GFW: not supported
 
+;Clash config base used by the generator, supports local files/URL
+clash_rule_base=http://127.0.0.1:10228/sources/subconverteriniexample/Full_AdblockPlus.tpl
+
 ruleset=🎯 دسترسی مستقیم,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🎯 دسترسی مستقیم,rules/Iran/IranDomains.list
 ruleset=🛑 مسدود سازی,rules/Iran/PersianBlocker.list
